--- a/finance-manager-frontend/src/app/auth/login/login.component.html
+++ b/finance-manager-frontend/src/app/auth/login/login.component.html
@@ -3,8 +3,8 @@
     <mat-card-title>Login</mat-card-title>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <mat-form-field appearance="outline" class="w-full">
-        <mat-label>Email</mat-label>
-        <input matInput type="email" formControlName="email">
+        <mat-label>Username or Email</mat-label>
+        <input matInput type="text" formControlName="email">
       </mat-form-field>
       <mat-form-field appearance="outline" class="w-full">
         <mat-label>Password</mat-label>
@@ -15,6 +15,9 @@
       </div>
       <div *ngIf="errorMessage" class="error-message">
         {{ errorMessage }}
+      </div>
+      <div class="signup-link">
+        Don't have an account? <a routerLink="/auth/signup">Sign Up</a>
       </div>
     </form>
   </mat-card>
